# propoe2

./: .gitignore  README.md  poem.txt  pyproject.toml  run.py
src/api/: __init__.py
src/model/: filter.py  mives.py  poem_builder.py  rhyme.py  score.py  sentence.py  verse_structure.py
src/web/: __init__.py
src/web/schemas/: __init__.py  _util.py  poem.py  prosody.py  weights.py
test/: test_api.py  test_integration.py
test/api/: test_api.py
