[tool.poetry]
name = "propoe2"
version = "0.0.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["test"]
python_files = ["test_*.py"]

python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "its_", "and_", "but_", "they_", "should_", "*_test"]